--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ share/python-wheels/
 MANIFEST
 *.png
 *.gif
-
+*.html
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
