Add live Dash and matplotlib thermal visualization
Introduces a Dash-based browser visualization (live_dash.py) for real-time PyECN simulation monitoring, including file upload, playback controls, and multiple Plotly plots. Adds a helper script (run_pyecn_job.py) to run simulations and save results. Adds a matplotlib-based live thermal visualizer (viz_live_thermal.py) and its documentation. Updates .gitignore, requirements.txt, and pyproject.toml to support new dependencies.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,11 @@ dependencies = [
     "numpy",
     "openpyxl",
     "pandas",
+    "dash",
     "plotly",
     "PyQt5",
     "scipy",
+    "toml",
     "tomli"
 ]
 
